fixed overflow bug in results

--- a/src/CSSFiles/Results.css
+++ b/src/CSSFiles/Results.css
@@ -5,13 +5,14 @@
 }
 
 #resDiv {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    overflow-y: auto hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #img {
@@ -67,6 +68,7 @@ p {
     height: 100vh;
     display: flex;
     flex-direction: column;
+
 }
 
 #spin {
